[gd_scene load_steps=2 format=3 uid="uid://bxj7uw5xjdx4b"]

[ext_resource type="Script" path="res://scripts/audio_bus_test.gd" id="1"]

[node name="AudioBusTest" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.25
anchor_top = 0.1
anchor_right = 0.75
anchor_bottom = 0.9
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Audio Bus Test"
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="MasterBus" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MasterBus"]
layout_mode = 2
text = "Master Volume"
theme_override_font_sizes/font_size = 18

[node name="HSlider" type="HSlider" parent="VBoxContainer/MasterBus"]
layout_mode = 2
max_value = 1.0
value = 0.8

[node name="MelodyBus" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MelodyBus"]
layout_mode = 2
text = "Melody Volume"
theme_override_font_sizes/font_size = 18

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MelodyBus"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="VBoxContainer/MelodyBus/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
value = 0.8

[node name="TestButton" type="Button" parent="VBoxContainer/MelodyBus/HBoxContainer"]
layout_mode = 2
text = "Test"

[node name="BassBus" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/BassBus"]
layout_mode = 2
text = "Bass Volume"
theme_override_font_sizes/font_size = 18

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BassBus"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="VBoxContainer/BassBus/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
value = 0.8

[node name="TestButton" type="Button" parent="VBoxContainer/BassBus/HBoxContainer"]
layout_mode = 2
text = "Test"

[node name="PercussionBus" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PercussionBus"]
layout_mode = 2
text = "Percussion Volume"
theme_override_font_sizes/font_size = 18

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PercussionBus"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="VBoxContainer/PercussionBus/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
value = 0.8

[node name="TestButton" type="Button" parent="VBoxContainer/PercussionBus/HBoxContainer"]
layout_mode = 2
text = "Test"

[node name="SFXBus" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/SFXBus"]
layout_mode = 2
text = "SFX Volume"
theme_override_font_sizes/font_size = 18

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/SFXBus"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="VBoxContainer/SFXBus/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
value = 0.8

[node name="TestButton" type="Button" parent="VBoxContainer/SFXBus/HBoxContainer"]
layout_mode = 2
text = "Test"